crates/aura-app/tests/ui/semantic_lifecycle_capability_private.rs
fn main() {
    let _ = aura_app::ui::workflows::semantic_facts::semantic_lifecycle_publication_capability();
}
